[package]
name = "nonogram_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
stylist = { version = "0.13.0", features = ["yew_integration"] }
web-sys = "0.3.67"
wasm-logger = "0.2.0"
log = "0.4.20"